--- a/static/playing-cards/index.html
+++ b/static/playing-cards/index.html
@@ -2,25 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Xeri Playing Cards (SVG)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="./css/cards.css" rel="stylesheet" />
-  <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin: 24px; }
-    header { display:flex; gap:12px; align-items:center; margin-bottom: 16px; }
-    button { padding: 8px 12px; border-radius: 8px; border: 1px solid #d0d4d9; background: #fff; cursor: pointer; }
-    button:hover { background: #f6f7f8; }
-  </style>
+  <link rel="stylesheet" href="css/cards.css" />
 </head>
 <body>
-  <header>
-    <h1 style="margin:0;">Xeri Playing Cards (SVG)</h1>
-    <button id="btn-shuffle">Shuffle</button>
-    <button id="btn-faces">Flip All</button>
+  <header class="toolbar">
+    <h1>Xeri Playing Cards (SVG)</h1>
+    <div class="actions">
+      <button id="shuffleBtn">Shuffle</button>
+      <button id="flipAllBtn">Flip All</button>
+    </div>
   </header>
 
-  <div id="cards-grid" class="pcards"></div>
+  <main>
+    <div id="deck" class="card-grid" aria-live="polite"></div>
+  </main>
 
-  <script type="module" src="./js/demo.js"></script>
+  <script type="module">
+    import { makeDeck, renderDeck, shuffle, flipAll } from "./js/cards-core.js";
+    const deckEl = document.getElementById("deck");
+    let deck = makeDeck();
+
+    renderDeck(deckEl, deck);
+
+    document.getElementById("shuffleBtn").addEventListener("click", () => {
+      shuffle(deck);
+      renderDeck(deckEl, deck);
+    });
+
+    document.getElementById("flipAllBtn").addEventListener("click", () => {
+      flipAll(deck);
+      renderDeck(deckEl, deck);
+    });
+  </script>
 </body>
 </html>
